--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "layer-shika"
 version = "0.1.0"
 edition = "2021"
-description = "A layer shell library crate with Slint as UI"
+description = "A layer shell library crate with Slint UI"
 license = "MIT OR Apache-2.0"
 repository = "https://codeberg.org/drendog/layer-shika"
 readme = "README.md"
@@ -39,10 +39,10 @@ glutin = { version = "0.32.0", default-features = false, features = [
 ] }
 log = "0.4.22"
 raw-window-handle = "0.6.2"
-slint = { version = "1.7.1", default-features = false, features = [
+slint = { version = "1.7.2", default-features = false, features = [
     "compat-1-2",
     "renderer-femtovg",
 ] }
-slint-interpreter = "1.7.1"
+slint-interpreter = "1.7.2"
 smithay-client-toolkit = "0.19.2"
 wayland-client = "0.31.5"
