feat(license): migrate to AGPL 3.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "layer-shika"
 version = "0.1.0"
 edition = "2021"
 description = "A layer shell library crate with Slint UI"
-license = "MIT OR Apache-2.0"
+license = "AGPL-3.0-or-later"
 repository = "https://codeberg.org/drendog/layer-shika"
 readme = "README.md"
 keywords = [
