--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A layer shell library crate with Slint UI"
 license = "AGPL-3.0-or-later"
-repository = "https://codeberg.org/drendog/layer-shika"
+repository = "https://codeberg.org/dyrland/layer-shika"
 readme = "README.md"
 keywords = [
     "layer-shell",
@@ -20,7 +20,7 @@ keywords = [
     "wlroots",
     "sway",
 ]
-categories = ["gui", "compositor"]
+categories = ["GUI"]
 
 [lints.clippy]
 all = { level = "warn", priority = -1 }
