chore: update repo link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A layer shell library crate with Slint UI"
 license = "AGPL-3.0-or-later"
-repository = "https://codeberg.org/dyrland/layer-shika"
+repository = "https://codeberg.org/waydeer/layer-shika"
 readme = "README.md"
 keywords = ["layer-shell", "wayland", "slint", "femtovg", "smithay"]
 categories = ["GUI"]
